javac lines: honour --opt=value, stop swallowing the token after an unknown option, and refuse ambiguous names
Preparing the elasticsearch parse config to move onto the product path (configure
build-input-configuration -> ParseJavacList) turned up three things in the javac front end. Both
existing javac fixtures are MAVEN logs (mvnLangchain4j, mvnTimefold-solver) and every project
configured for this route is a Maven project, so a Gradle command line had never been parsed.

1. --module-path=<path> WAS DROPPED IN SILENCE. Gradle writes the GNU inline form on every modular
   compile it logs, and today that is harmless only BY LUCK: it also writes the space-separated form
   earlier on the same line. The inline token then fell through to the lookahead branch and ate the
   --module-version=... that followed it. A build tool emitting only the inline form would have
   produced a source set with an EMPTY module path and no complaint -- and on a modular project that
   is not a degradation, it is every cross-module reference failing to resolve.
   Fixed by splitting on the first '=' of a long option and routing both spellings through one table.
   javac's -cp / -p / --class-path / --source-path aliases were being ignored too; added.

2. AN UNKNOWN OPTION USED TO CONSUME THE TOKEN AFTER IT. The logic was inverted: anything not on a
   hard-coded parameter-less list was ASSUMED to take a value, and on a javac line the next token is
   very often the first SOURCE FILE. A dropped source file is invisible -- the set still parses, one
   type short. Now only options in the valued table consume a lookahead, which also deletes the
   parameter-less list: one table has to be right instead of two.
   ⚠ MEASURED BEFORE CHANGING IT, and this is prevention rather than repair: over 48 real Gradle javac
   lines from the corpus it would have swallowed 0 source files, because an -X option happens to sit
   last on every one of them. My own control found it; the corpus says it does not f